tests/success/constant_rvalue_tuple_subscript.bz
function test()
{
	let _ = [int32, str, float32]()[1];
}
